--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -19,6 +19,19 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        env:
+        - name: DB_HOST
+          value: postgres
+        - name: DB_PORT
+          value: "5432"
+        - name: DB_NAME
+          value: clinic
+        - name: DB_USER
+          value: postgres
+        - name: DB_PASSWORD
+          value: admin
+        - name: PORT
+          value: "3002"
         ports:
         - containerPort: {{ .Values.service.targetPort }}
         resources:
